--- a/notes.html
+++ b/notes.html
@@ -1,2 +1,7 @@
 <h1>How work with services</h1>
 
+<p>
+    Для перехода между состояниями дашборда
+    self.ctx.stateController.openState( /* тут наименование состояния */ , {}, false)
+    
+</p>
