add new note about how make simple observables with JS

--- a/notes.html
+++ b/notes.html
@@ -1,3 +1,29 @@
+<h1>Observable with native JS</h1>
+<p>
+export class Emitter {
+    constructor() {
+        this.listeners = {}
+    }
+    // event - название ивента которое имитим
+    emit(event, ...arg) {
+        if (!Array.isArray(this.listeners[event])) {
+        return false
+    }
+    this.listeners[event].forEach(listener => {
+        listener(...arg)
+    })
+        return true
+    }
+    subscribe(event, fn) {
+        this.listeners[event] = this.listeners[event] || []
+        this.listeners[event].push(fn)
+        return () => {
+            this.listeners[event] = this.listeners[event].filter(listener => listener !== fn)
+        }
+    }
+}
+</p>
+
 <h1>How work with services</h1>
 
 <p>
