--- a/notes.html
+++ b/notes.html
@@ -1,3 +1,14 @@
+work with assetService
+
+let $injector = self.ctx.$scope.$injector;
+    let assetService = $injector.get(self.ctx.servicesMap.get('assetService'));
+    
+    assetService.findByName(line).subscribe((response) => {})
+    assetService.saveAsset(asset).subscribe(() => {})
+    
+    self.ctx.updateAliases();
+--------------------------------------------------------------------------------------------------------------------------------------------
+
 <h1>Observable with native JS for TB</h1>
 
 Emitter = function() {};
